--- a/index.html
+++ b/index.html
@@ -173,22 +173,12 @@
             </a>
           </article>
 
-          <article class="intervalCardReveal samucadesign">
-            <h3>SamucaDesign</h3>
-            <p>
-              Site de portfólio para Designer, feito com HTML, CSS, Bootstrap, JavaScript e PHP.
-            </p>
-
-            <a href="https://samucadesign.com.br/" rel="noopener" target="_blank" id="samucadesign">Visualizar projeto
-            </a>
-          </article>
-
           <article class="intervalCardReveal instituto">
-            <h3>Instituto Thiago Torres (Em desenvolvimento)</h3>
+            <h3>Instituto Thiago Torres</h3>
             <p>
-              Site institucional para instituto de desenvolvimento.
+              Site institucional para um instituto de desenvolvimento pessoal.
             </p>
-            <a href="https://devtex.com.br/thiagotorres/" rel="noopener" target="_blank" id="instituto">Visualizar
+            <a href="https://institutothiagotorres.com.br/" rel="noopener" target="_blank" id="instituto">Visualizar
               projeto
             </a>
           </article>
@@ -200,11 +190,24 @@
             </a>
           </article>
 
-          <article class="intervalCardReveal none">
-            <h3>Em construção...</h3>
+          <article class="intervalCardReveal samucadesign">
+            <h3>SamucaDesign</h3>
             <p>
-              Quem sabe o seu pode ser o próximo :D
+              Site de portfólio para Designer, feito com HTML, CSS, Bootstrap, JavaScript e PHP.
             </p>
+
+            <a href="https://samucadesign.com.br/" rel="noopener" target="_blank" id="samucadesign">Visualizar projeto
+            </a>
+          </article>
+
+          <article class="intervalCardReveal udev">
+            <h3>UDEV</h3>
+            <p>
+              Site de para uma empresa de desenvolvimento web.
+            </p>
+
+            <a href="https://udev-br.vercel.app/" rel="noopener" target="_blank" id="udev">Visualizar projeto
+            </a>
           </article>
 
           <article class="intervalCardReveal none">
