--- a/english.html
+++ b/english.html
@@ -144,13 +144,18 @@
                         <p class="changeExperience">
                             ✓ Leadership in the development of websites and landing pages.
                             <br><br>
-                            ✓Led the development of an education system for Engineers and Professors at the Federal University of Alagoas (UFAL). The system has student registration, registration of student doubts, generation of users with Admin or Student level, scores and other features. Laravel was used for the project.
+                            ✓Led the development of an education system for Engineers and Professors at the Federal
+                            University of Alagoas (UFAL). The system has student registration, registration of student
+                            doubts, generation of users with Admin or Student level, scores and other features. Laravel
+                            was used for the project.
                             <br><br>
                             ✓ Maintenance of a WEB ERP using Laravel, Jquery and Blade.
                             <br><br>
-                            ✓ Working on the development of management software for multiple agricultural farms and harvest reports. Laravel and MySQL are being used;
+                            ✓ Working on the development of management software for multiple agricultural farms and
+                            harvest reports. Laravel and MySQL are being used;
                             <br><br>
-                            ✓ Working on the development of management software for dental clinics. Laravel and MySQL are being used;
+                            ✓ Working on the development of management software for dental clinics. Laravel and MySQL
+                            are being used;
                         </p>
                     </div>
                 </div>
@@ -172,6 +177,23 @@
                         </a>
                     </article>
 
+                    <article class="intervalCardReveal instituto">
+                        <h3>Instituto Thiago Torres</h3>
+                        <p>
+                            Institutional website for a personal development institute.
+                        </p>
+                        <a href="https://institutothiagotorres.com.br/" rel="noopener" target="_blank"
+                            id="instituto">View project
+                        </a>
+                    </article>
+
+                    <article class="intervalCardReveal devtex">
+                        <h3>Devtex</h3>
+                        <p>Website for a software house.</p>
+                        <a href="https://devtex.com.br/" rel="noopener" target="_blank" id="devtex">View project
+                        </a>
+                    </article>
+
                     <article class="intervalCardReveal samucadesign">
                         <h3>SamucaDesign</h3>
                         <p>
@@ -183,22 +205,16 @@
                         </a>
                     </article>
 
-                    <article class="intervalCardReveal instituto">
-                        <h3>Instituto Thiago Torres (Under development)</h3>
+                    <article class="intervalCardReveal udev">
+                        <h3>UDEV</h3>
                         <p>
-                            Institutional website for development institute.
+                            Website for a web development company.
                         </p>
-                        <a href="https://devtex.com.br/thiagotorres/" rel="noopener" target="_blank" id="instituto">View
-                            project
+
+                        <a href="https://udev-br.vercel.app/" rel="noopener" target="_blank" id="udev">View project
                         </a>
                     </article>
 
-                    <article class="intervalCardReveal devtex">
-                        <h3>Devtex Sistemas</h3>
-                        <p>Website for software house</p>
-                        <a href="https://devtex.com.br/" rel="noopener" target="_blank" id="devtex">View project
-                        </a>
-                    </article>
 
                     <article class="intervalCardReveal none">
                         <h3>Under construction...</h3>
