--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
           <article class="intervalCardReveal udev">
             <h3>UDEV</h3>
             <p>
-              Site de para uma empresa de desenvolvimento web.
+              Site para uma empresa de desenvolvimento web.
             </p>
 
             <a href="https://udev-br.vercel.app/" rel="noopener" target="_blank" id="udev">Visualizar projeto
